--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    /* padding: 0; */
     margin: 0;
 }
 
@@ -59,10 +58,15 @@ code {
     margin: auto;
 }
 
+/* responsive */
 @media screen and (min-width: 500px) {
     #navbar {
         /* width: 70%; */
         margin: auto;
+    }
+
+    header {
+        font-size: 1.4em;
     }
 
     .nav-link {
@@ -84,8 +88,7 @@ code {
 
     #navbar {
         position: fixed;
-        min-width: 290px;
-        max-width: 19vw;
+        width: 25vw;
         height: 100%;
         top: 0;
         left: 0;
@@ -97,16 +100,77 @@ code {
         width: 100%;
         border: 1px solid black;
         text-decoration: none;
-        padding: 2.3em;
+        padding: 2.35em;
     }
 
     #main-doc {
         position: absolute;
-        margin-left: 300px;
-        margin-right: 10px;
-        width: 76vw;
+        margin-left: 200px;
+        /* margin-right: 50px; */
+        width: 74vw;
         overflow-y: scroll;
-
-        /* position: fixed; */
+        overflow-x: hidden;
     }
+
+    p,
+    ul {
+        margin: 1em;
+    }
+
+    code {
+        margin: auto;
+        line-height: 35px;
+        margin-left: 10px;
+        /* padding: 1em; */
+    }
+
+}
+
+@media screen and (min-width: 787px) {
+    #main-doc {
+        margin-left: 200px;
+        width: 70vw;
+
+    }
+
+    .nav-link {
+        padding: 2.52em;
+    }
+
+}
+
+@media screen and (min-width: 800px) {
+    #main-doc {
+        margin-left: 230px;
+        width: 70vw;
+
+    }
+
+}
+
+@media screen and (min-width: 880px) {
+    #main-doc {
+        margin-left: 260px;
+        width: 70vw;
+
+    }
+
+}
+
+@media screen and (min-width: 1010px) {
+    #main-doc {
+        margin-left: 290px;
+        width: 70vw;
+
+    }
+
+}
+
+@media screen and (min-width: 1115px) {
+    #main-doc {
+        margin-left: 360px;
+        width: 70vw;
+
+    }
+
 }
